@@ -1,3 +1,0 @@
-.idea
-*.pyo
-*.pyc
