@@ -1,0 +1,5 @@
+# plugin.video.dr.dk.bonanza
+![Kodi Version](https://img.shields.io/badge/kodi%20version-19.x-blue)
+[![Build Status](https://img.shields.io/endpoint.svg?url=https%3A%2F%2Factions-badge.atrox.dev%2Fxbmc-danish-addons%2Fplugin.video.dr.dk.bonanza%2Fbadge%3Fref%3Dmaster&style=flat)](https://actions-badge.atrox.dev/xbmc-danish-addons/plugin.video.dr.dk.bonanza/goto?ref=master)
+[![License](https://img.shields.io/github/license/xbmc-danish-addons/plugin.video.dr.dk.bonanza)](https://github.com/xbmc-danish-addons/plugin.video.dr.dk.bonanza/blob/master/LICENSE.txt)
+[![PEP8](https://img.shields.io/badge/code%20style-pep8-orange.svg)](https://www.python.org/dev/peps/pep-0008/)
