@@ -1,3 +1,7 @@
+[B]Version 3.2.2 - 2022-09-26[/B]
+- use inputstream adaptive
+- re-factor for python3 only
+
 [B]Version 3.2.0 - 2020-11-26[/B]
 - Updated addon to match website changes
 - Moving "ownership" of the addon, hence Tommy have stopped developing on the addon.
